@@ -15,6 +15,8 @@
         added check that documentation.conf and pf.conf.defaults 
           contain same set of options
           (http://www.packetfence.org/mantis/view.php?id=723)
+        added access to nessusclient file scan from web admin GUI
+          (http://www.packetfence.org/mantis/view.php?id=724)
 
 
 1.8.3
